# rna

./: LICENSE  README.md  pyproject.toml
demos/: DemoAudio.ipynb  DemoAudios.ipynb  DemoImages.ipynb  DemoNeuronaGradiente.ipynb  DemoNeuronaLineal.ipynb  DemoPerceptron.ipynb  DemoRNA.ipynb
rna/: ClassNeuronaBase.py  ClassNeuronaGral.py  ClassNeuronaLineal.py  ClassPerceptron.py  ClassRNMulticlase.py  RN_Clustering.py  grafica.py  grafica_CL.py
rna/audio/: __init__.py
rna/data/: ClassDataLoader - copia.py  ClassDataLoader.py
rna/data/.ipynb_checkpoints/: ClassDataLoader-checkpoint.py  __init__-checkpoint.py
rna/images/: __init__.py
rna/visual/: ClassAudioCard.py  ClassCardViewer.py  ClassGridCardViewer.py
