[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rna"
version = "0.1.5"
description = "Framework Educativo para Redes Neuronales Artificiales"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    {name = "César Estrebou & Laura Lanzarini", email = "rma.univ@email.com"}
]

dependencies = [
    "requests",
    "pandas",
    "pillow",
    "chardet",
    "numpy",
    "librosa"
]

[tool.setuptools.packages.find]
include = ["rna*"]